@@ -78,14 +78,11 @@ try:
                         if mosq_test.expect_packet(conn, "connect", connect_packet):
                             conn.send(connack_packet)
 
-                            if mosq_test.expect_packet(conn, "2nd retried publish", publish_dup_packet):
-                                conn.send(pubrec_packet)
+                            if mosq_test.expect_packet(conn, "retried pubrel", pubrel_dup_packet):
+                                conn.send(pubcomp_packet)
 
-                                if mosq_test.expect_packet(conn, "pubrel", pubrel_packet):
-                                    conn.send(pubcomp_packet)
-
-                                    if mosq_test.expect_packet(conn, "disconnect", disconnect_packet):
-                                        rc = 0
+                                if mosq_test.expect_packet(conn, "disconnect", disconnect_packet):
+                                    rc = 0
 
     conn.close()
 finally:
